imagen-slider,newtable,respon..

--- a/Equidna/Views/Home/Linear.cshtml
+++ b/Equidna/Views/Home/Linear.cshtml
@@ -22,130 +22,249 @@
 </div>
 
 
-<!--<div class="row">
-
    
-    
-    
-</div>
-    -->
 
-<div class="col-xs-6 col-md-offset-3">
-    <div class="col-xs-2" style="color: red">
-        <div class="container">
-            <div class="row clearfix">
-                <div class="col-md-12 column">
-                    <table class="table table-bordered table-hover" id="tab_logic">
-                        <thead>
-                            <tr>
-
-
-                                <th class="text-center">
-                                    Velocidad
-                                </th>
-
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr id='addr0'>
-
-
-                                <td>
-                                    <input type="number" id="table1" step="0.01" name='mail0' placeholder='Velocidad' style="text-align: center" class="form-control" />
-                                </td>
-
-                            </tr>
-                            <tr id='addr1'></tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-
-        </div>
-    </div>
-</div>
 <div class="row">
-    <div class="col-xs-5 ">
+    <div class="col-xs-6 ">
         <div id='VelocityBoard' class='jxgbox graphbox'        style='user-select: none; overflow: hidden; position: relative;'></div>
     </div>
     
-    <div class="col-xs-4 ">
+    <div class="col-xs-4">
+        <div class="row">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 id="Formuvelo" style="text-align: center">
+                        
+                    </h4>
+                </div>
+                <table class="table table-fixed">
+                    <thead >
+                        <tr >
+                            <th class="col-xs-2 " >X</th>
+                           
+                            <th class="col-xs-2 " >Y</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="col-xs-6">
+                               0
+                            </td>
+                          
+                            <td class="col-xs-6">
+                                <input type="number" id="x2" name='x1' step="0.01" class="form-control" style="text-align: center"  />
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-xs-6">1</td>
+
+                            <td class="col-xs-6">23</td>
+                        </tr>
+                        <tr>
+                            <td class="col-xs-6">1</td>
+
+                            <td class="col-xs-6">23</td>
+                        </tr>
+                        <tr>
+                            <td class="col-xs-6">1</td>
+
+                            <td class="col-xs-6">23</td>
+                        </tr>
+                        <tr>
+                            <td class="col-xs-6">1</td>
+
+                            <td class="col-xs-6">23</td>
+                        </tr>
+                        <tr>
+                            <td class="col-xs-6">1</td>
+
+                            <td class="col-xs-6">23</td>
+                        </tr>
+                        <tr>
+                            <td class="col-xs-6">1</td>
+
+                            <td class="col-xs-6">23</td>
+                        </tr>
+                        <tr>
+                            <td class="col-xs-6">1</td>
+
+                            <td class="col-xs-6">23</td>
+                        </tr>
+                        
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    
+  <!--<div class="tbl-header col-xs-4" >
         <div class="container">
             <div class="row clearfix">
-                <div class="col-md-2 column">
-                    <table class="table table-bordered table-hover" id="tab_logic">
+                <div class="col-md-1 column">
+                    <table cellpadding="0" cellspacing="0" border="0" id="tab_logic">
                         <thead>
-                            <tr>
+                        <tr>
 
-                                <th class="text-center" style="color: red">
-                                    Tiempo
-                                </th>
-                                <th class="text-center" style="color: blue">
-                                    Posición
-                                </th>
+                            <th class="text-center" style="color: red">
+                                Tiempo
+                            </th>
+                            <th class="text-center" style="color: blue">
+                                Posición
+                            </th>
 
 
-                            </tr>
+                        </tr>
                         </thead>
-                        <tbody>
-                            <tr id='addr0'>
+                        
+                            <tbody class="tbl-content">
+                                <tr id='addr0'>
 
-                                <td>
-                                    <input type="number" id="x2" name='x1' step="0.01" class="form-control" style="text-align: center" readonly />
-                                </td>
-                                <td>
-                                    <input type="number" id="y1" step="0.01" name='mail0' style="text-align: center" class="form-control" />
-                                </td>
+                                    <td>
+                                        <input type="number" id="x2" name='x1' step="0.01" class="form-control" style="text-align: center" readonly />
+                                    </td>
+                                    <td>
+                                        <input type="number" id="y1" step="0.01" name='mail0' style="text-align: center" class="form-control" />
+                                    </td>
 
-                            </tr>
-                            <tr id='addr1'></tr>
-                        </tbody>
+                                </tr>
+                                <tr id='addr0'>
+
+                                    <td>
+                                        <input type="number" id="x2" name='x1' step="0.01" class="form-control" style="text-align: center" readonly />
+                                    </td>
+                                    <td>
+                                        <input type="number" id="y1" step="0.01" name='mail0' style="text-align: center" class="form-control" />
+                                    </td>
+
+                                </tr>
+                                <tr id='addr0'>
+
+                                    <td>
+                                        <input type="number" id="x2" name='x1' step="0.01" class="form-control" style="text-align: center" readonly />
+                                    </td>
+                                    <td>
+                                        <input type="number" id="y1" step="0.01" name='mail0' style="text-align: center" class="form-control" />
+                                    </td>
+
+                                </tr>
+                                <tr id='addr0'>
+
+                                    <td>
+                                        <input type="number" id="x2" name='x1' step="0.01" class="form-control" style="text-align: center" readonly />
+                                    </td>
+                                    <td>
+                                        <input type="number" id="y1" step="0.01" name='mail0' style="text-align: center" class="form-control" />
+                                    </td>
+
+                                </tr>
+                                <tr id='addr0'>
+
+                                    <td>
+                                        <input type="number" id="x2" name='x1' step="0.01" class="form-control" style="text-align: center" readonly />
+                                    </td>
+                                    <td>
+                                        <input type="number" id="y1" step="0.01" name='mail0' style="text-align: center" class="form-control" />
+                                    </td>
+
+                                </tr>
+                            </tbody>
+                      
                     </table>
                 </div>
             </div>
-            <!--<a id="add_row" class="btn btn-default pull-left">Add Row</a><a id='delete_row' class="pull-right btn btn-default">Delete Row</a>-->
         </div>
-    </div>
+    </div>-->  
 </div>
 
-
-<div class="container">
-    <div class="col-xs-5">
+<div class="row">
+    <div class="col-xs-6">
         <div id='PositionBoard' class='jxgbox graphbox'        style='user-select: none; overflow: hidden; position: relative;'></div>
     </div>
-    <div class="col-xs-2" style="color: blue">
-        <div class="container">
-            <div class="row clearfix">
-                <div class="col-md-12 column">
-                    <table class="table table-bordered table-hover" id="tab_logic">
-                        <thead>
-                            <tr>
-
-                                <th class="text-center">
-                                    Posición
-                                </th>
-
-
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr id='addr0'>
-
-
-                                <td>
-                                    <input type="number" id="table2" step="0.01" name='mail0' placeholder='Posición ' style="text-align: center" class="form-control" />
-                                </td>
-
-                            </tr>
-                            <tr id='addr1'></tr>
-                        </tbody>
-                    </table>
+    
+    <div class="col-xs-4">
+        <div class="row">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 id="Formuposi" style="text-align: center">
+                        
+                    </h4>
                 </div>
+                <table class="table table-fixed">
+                    <thead>
+                        <tr>
+                            <th class="col-xs-2">#</th>
+                            <th class="col-xs-8">Name</th>
+                            <th class="col-xs-2">Points</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="col-xs-2">1</td>
+                            <td class="col-xs-8">Mike Adams</td>
+                            <td class="col-xs-2">23</td>
+                        </tr>
+                        <tr>
+                            <td class="col-xs-2">2</td>
+                            <td class="col-xs-8">Holly Galivan</td>
+                            <td class="col-xs-2">44</td>
+                        </tr>
+                        <tr>
+                            <td class="col-xs-2">3</td>
+                            <td class="col-xs-8">Mary Shea</td>
+                            <td class="col-xs-2">86</td>
+                        </tr>
+                        <tr>
+                            <td class="col-xs-2">4</td>
+                            <td class="col-xs-8">Jim Adams</td>
+                            <td>23</td>
+                        </tr>
+                        <tr>
+                            <td class="col-xs-2">5</td>
+                            <td class="col-xs-8">Henry Galivan</td>
+                            <td class="col-xs-2">44</td>
+                        </tr>
+                        <tr>
+                            <td class="col-xs-2">6</td>
+                            <td class="col-xs-8">Bob Shea</td>
+                            <td class="col-xs-2">26</td>
+                        </tr>
+                        <tr>
+                            <td class="col-xs-2">7</td>
+                            <td class="col-xs-8">Andy Parks</td>
+                            <td class="col-xs-2">56</td>
+                        </tr>
+                        <tr>
+                            <td class="col-xs-2">8</td>
+                            <td class="col-xs-8">Bob Skelly</td>
+                            <td class="col-xs-2">96</td>
+                        </tr>
+                        <tr>
+                            <td class="col-xs-2">9</td>
+                            <td class="col-xs-8">William Defoe</td>
+                            <td class="col-xs-2">13</td>
+                        </tr>
+                        <tr>
+                            <td class="col-xs-2">10</td>
+                            <td class="col-xs-8">Will Tripp</td>
+                            <td class="col-xs-2">16</td>
+                        </tr>
+                        <tr>
+                            <td class="col-xs-2">11</td>
+                            <td class="col-xs-8">Bill Champion</td>
+                            <td class="col-xs-2">44</td>
+                        </tr>
+                        <tr>
+                            <td class="col-xs-2">12</td>
+                            <td class="col-xs-8">Lastly Jane</td>
+                            <td class="col-xs-2">6</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
-
         </div>
     </div>
-    <div class="col-xs-4">
+
+   <!--<div class="col-xs-4">
         <div class="container">
             <div class="row clearfix">
                 <div class="col-md-2 column">
@@ -179,9 +298,9 @@
                     </table>
                 </div>
             </div>
-            <!--<a id="add_row" class="btn btn-default pull-left">Add Row</a><a id='delete_row' class="pull-right btn btn-default">Delete Row</a>-->
+           
         </div>
-    </div>
+    </div>--> 
 </div>
    
     
@@ -193,6 +312,7 @@
 
 
 <script type='text/javascript'>
+   
 
     var currentTime = 0;
     var interval;
@@ -213,6 +333,10 @@
     var addrow = document.getElementById("add_row");
     var delerow = document.getElementById("delete_row");
     var value;
+    var Formulapos = document.getElementById("Formuposi");
+    var Formulavelo = document.getElementById("Formuvelo");
+    
+    
     function add(parameters) {
 
     }
@@ -220,8 +344,8 @@
     function updateFromNumber() {
         if (firstUpdate) {
             firstUpdate = false;
-          //  positionFunction.a = parseFloat(numberField.value);
-           // linearPoint = quadraticFunction.derivate();
+            //  positionFunction.a = parseFloat(numberField.value);
+            // linearPoint = quadraticFunction.derivate();
             updateFunction();
         }
     }
@@ -251,7 +375,7 @@
     }
 
     function Step() {
-        currentTime += timeInterval / 400;
+        currentTime += timeInterval / 1000;
         if (currentTime >= parseInt(document.getElementsByName("endTime")[0].value)) {
             clearInterval(interval);
             positionBoard.removeObject(guidingLine);
@@ -281,8 +405,14 @@
     var velocityBoard = JXG.JSXGraph.initBoard('VelocityBoard', { boundingbox: [-2, 9, 9, -2], axis: true, grid: true, shownavigation: true, keepAspectRatio: true, showClearTraces: true });
     velocityBoard.create('text', [0.5, 8, "(m/s)"]);
     velocityBoard.create('text', [8, 0.5, "tiempo()"]);
-    var sliderBox = JXG.JSXGraph.initBoard('sliderBox', { boundingbox: [-(minY * (maxX - minX)), 5, minY * (maxX - minX), -5], axis: false, shownavigation: false, showCopyright: false, keepAspectRatio: true });
-    var slider = sliderBox.create('slider', [[-(minY * (maxX - minX)), 0], [(minY * (maxX - minX)), 0], [(minY * (maxX - minX)), 0, -(minY * (maxX - minX))]], { ticks: { drawLabels: false, highlight: false }, color: "Blue" });
+
+
+    var sliderBox = JXG.JSXGraph.initBoard('sliderBox', { boundingbox: [-(minY * (maxX - minX)), 5, minY * (maxX - minX), -5], axis: false,grid: true, shownavigation: true, showCopyright: false, keepAspectRatio: true });
+    var urlImg = "https://vignette4.wikia.nocookie.net/kirby/images/0/01/Kirby_Artwork_Caminando_%28KA%29.png/revision/latest?cb=20100808233646";
+    // var slider = sliderBox.create('slider', [urlImg,[1,1],[1,1] ]);
+    var slider = sliderBox.create('slider', [[-(minY * (maxX - minX)), 0], [(minY * (maxX - minX)), 0], [(minY * (maxX - minX)), 0, -(minY * (maxX - minX))]], { ticks: { drawLabels: false, highlight: false,size:5,opacity:0.3 } });
+    var im = sliderBox.create('image', [urlImg, [function () { return slider.X(); }, function () { return slider.Y(); }], [5, 5]]);
+    // var im = sliderBox.create('image', [], [function() { return slider.X(); }], [1, 1]]);
 
     velocityBoard.highlightInfobox = function (x, y, el) {
         velocityBoard.infobox.setText('(' + el.X().toFixed(2) + ', ' + el.Y().toFixed(2) + ')');
@@ -299,38 +429,38 @@
         'functiongraph',
         [function (x) { return positionFunction.evaluate(x); }],
         { strokeColor: "Blue" }
-        );
+    );
 
     velocityBoard.create(
         'functiongraph',
         [function (x) { return velocityFunction.evaluate(x); }],
         { strokeColor: "Red" }
-        );
+    );
 
     linearPoint = positionBoard.create('point', [0, 0], { size: 2, name: "", color: "Blue" });
     linearPoint.on(
         'drag',
         function () { linearPoint.moveTo([0, linearPoint.Y()]) }
-        );
+    );
 
     constantPoint = velocityBoard.create('point', [0, positionFunction.a], { size: 2, name: "", color: "Red" });
     constantPoint.on(
         'drag',
         function () { constantPoint.moveTo([0, constantPoint.Y()]) }
-        );
+    );
 
     function updateFunction() {
 
         velocityFunction.a = constantPoint.Y();
         positionFunction = velocityFunction.integrate(linearPoint.Y());
         //form
-        updateform();
+        //updateform();
         //form2
-        updateform2();
+        //updateform2();
         //input
         updatenumerfield();
         //table
-        updatetablenum();
+       // updatetablenum();
         //text html
         updateformhtml();
         positionBoard.update();
@@ -344,7 +474,7 @@
         numberField.value = Math.round(numberField.value * 100) / 100;
     }
 
-    function updatetablenum() {
+   /* function updatetablenum() {
         numtable.value = velocityFunction.a;
         numtable2.value = positionFunction.b;
         numtable.value = Math.round(numtable.value * 100) / 100;
@@ -365,11 +495,13 @@
         var posi = positionBoard.create('point', [tablax2.value, tablay2.value], { size: 2, name: "", color: "Red" });
         tablay2.value = null;
         tablax2.value = null;
-       // posi.visible(false);
-    }
+        // posi.visible(false);
+    }*/
 
     function updateformhtml(parameters) {
         FormulaDiv.innerHTML = positionFunction.ToString();
+        Formulavelo.innerHTML = "X:0    Y:" + numberField2.value;
+        Formulapos.innerHTML = "X:0     Y:" + numberField.value;
     }
     updateFunction();
     positionBoard.on('update', updateFunction);
